input validation/table tabs created

--- a/todo
+++ b/todo
@@ -3,3 +3,10 @@
 3 Handle Eror pages 
 4 Create Outlet for nested routes
 5 Create Sidebar
+
+
+
+
+-- todo
+-- create tables when creating template
+-- copy table whit all columns
