data structure fixed/project slug filtered across all tables

--- a/todo
+++ b/todo
@@ -6,10 +6,40 @@
 
 
 
+When creatin project.
+If of this project shared to every column_data.
 
 -- todo
 -- create tables when creating template
 -- copy table whit all columns
 
 
---Handle new item add
+--Handle new item add (sheet modal right side)
+
+Render slugs on project page
+Render iframe with rendered HTML and swapped data
+Add copy button
+
+Think about JSON
+
+
+1 проект имеет 16 таблиц.
+Каждая таблица создается при создании шаблона.
+
+В Таблицу для первой категории я могу добавить 14 стран.
+В Таблицу для второй категории я могу добавить 12 стран.
+В Таблицу для третьей категории я могу добавить 10 стран.
+
+Проблема:
+Нужно определить нужно ли рендерить данный Slug,
+Так как его должна иметь каждая таблица и только после проверки отрисовать его
+в опциях рендера проекта.
+
+т.е. пользователь все ещё может добавить разное количество данных, но не сможет их отрендерить.
+
+Нужно проитерироваться по каждой таблице проекта и проверить имеет ли таблица итерируемый slug.
+Если имеет то добавляем язык.
+Если язык уже есть, пропустить его.
+Если не имеет, не добавляем.
+
+И таким образом
