createdAt key added

--- a/todo
+++ b/todo
@@ -48,4 +48,13 @@ Think about JSON
 duplicate by n times
 
 fix column ordering import.
-check why every slug is pl
+link, image, plain text add options to columns select
+handle the same slug name
+
+"Import conflict"
+
+An item with slug "" already exists
+
+check box (apoply to all repetitive items)
+
+Skip item or Update item
