--- a/todo
+++ b/todo
@@ -47,6 +47,7 @@ Think about JSON
 
 duplicate by n times
 
+  // TODO: REMOVE ALL COLUMNS WITH ID OF DELETED TABLE
 link, image, plain text add options to columns select
 handle the same slug name
 
@@ -57,3 +58,4 @@ An item with slug "" already exists
 check box (apoply to all repetitive items)
 
 Skip item or Update item
+
