--- a/todo
+++ b/todo
@@ -1,10 +1,6 @@
-1 Project initialized
-2 Navigation routes created
-3 Handle Eror pages 
-4 Create Outlet for nested routes
-5 Create Sidebar
+<!-- CONSTRAINTS -->
 
-
+1 tag can contain only 1 data-table
 
 When creatin project.
 If of this project shared to every column_data.
