--- a/todo
+++ b/todo
@@ -15,3 +15,10 @@ Todo:
     style: object woth key value pairs related to CSS style
   }
 ]
+
+
+
+
+table data update check why duplicated after saving
+project archive
+remove from table list duplicate and delete project
