--- a/todo
+++ b/todo
@@ -17,7 +17,10 @@ Todo:
 ]
 
 
-
+host: localhost || 192.168.160.57
+port: 5432
+username: postgres
+password: oturig02
 
 table data update check why duplicated after saving
 project archive
