--- a/todo
+++ b/todo
@@ -1,51 +1,17 @@
-Todo:
-  -handle color change for: background and text
-  
-  Project responsible for saving the changes to colors.
-  There should be additional table for saving colors with fields:
+copy template
 
-  project_id: related to project.
-  node: where apply colors.
-  style: styles
+concatenate templates
 
-[
-  {
-    project_id: 1,
-    node: url to object node,
-    style: object woth key value pairs related to CSS style
-  }
-]
+filter projects archive
+check error page after submitting
 
-Column type:
-  -add column type: when adding column type i can replace data-text data-href data-src to data-column because content that has to be replaced will be setted by column type
+fix copy table
+fix name change for table
+fix populate table confirmation
 
-Options:
-  -link
-  -image
-  -text
-if type text replace text
-if type href replace href
-if type src replace src
-{
-  "id": "177de4e8-41d1-40f8-b4c2-a6f1adbe4fb9",
-  "type": "text",
-  "header": "Href",
-  "accessorKey": "Href",
-  "createdat": 1706611659375,
-  "table_id": "62dc9b12-0436-48d8-872a-a677c7689305"
-}
+подумать над добавлением переменных через UI.
+Думаю лучшим выходом будет парсинг таблиц и переменных с шаблона.
 
-Variables to template can be setted only from UI interface.
+Удалить возможность копирования шаблона руками. при копировании удалять переменные из шаблона.
 
-What to do with colors?
-leave it as it is or add possibility change colors depending from renderend slug?
-
-host: localhost || 192.168.160.57
-port: 5432
-username: postgres
-password: oturig02
-
-table data update check why duplicated after saving
-project archive
-remove from table list duplicate and delete project
-add components header and footer with variables and tables for that component
+обработать неизвестный айдишник
