--- a/todo
+++ b/todo
@@ -12,6 +12,9 @@ fix populate table confirmation
 подумать над добавлением переменных через UI.
 Думаю лучшим выходом будет парсинг таблиц и переменных с шаблона.
 
+Что происходит с project_styles переменной когда добавляю стили к другому проекту который использует ту же ноду для стилей?
+Проблема может заключаться в том, что я перезаписываю переменную.
+
 Удалить возможность копирования шаблона руками. при копировании удалять переменные из шаблона.
 
 обработать неизвестный айдишник
