--- a/todo
+++ b/todo
@@ -1,5 +1,6 @@
-copy template
+; copy template
 
+Удалить возможность копирования шаблона руками. при копировании удалять переменные из шаблона.
 concatenate templates
 
 ; filter projects archive
@@ -11,10 +12,5 @@ concatenate templates
 
 подумать над добавлением переменных через UI.
 Думаю лучшим выходом будет парсинг таблиц и переменных с шаблона.
-
-Что происходит с project_styles переменной когда добавляю стили к другому проекту который использует ту же ноду для стилей?
-Проблема может заключаться в том, что я перезаписываю переменную.
-
-Удалить возможность копирования шаблона руками. при копировании удалять переменные из шаблона.
 
 ; обработать неизвестный айдишник
