fixed data table structure for db

--- a/todo
+++ b/todo
@@ -14,3 +14,8 @@ concatenate templates
 Думаю лучшим выходом будет парсинг таблиц и переменных с шаблона.
 
 ; обработать неизвестный айдишник
+
+
+Ограничить количество запросов.
+Заморозить кнопки на отпраку запроса.
+Поставить пароль на вход.
