refactoring fetching to useQuery

--- a/todo
+++ b/todo
@@ -19,3 +19,6 @@ concatenate templates
 Ограничить количество запросов.
 Заморозить кнопки на отпраку запроса.
 Поставить пароль на вход.
+
+
+add tableProjectcart to populate
