refactoring List of columns

--- a/todo
+++ b/todo
@@ -1,30 +1,1 @@
-; copy template
-
-Удалить возможность копирования шаблона руками. при копировании удалять переменные из шаблона.
-concatenate templates
-
-; filter projects archive
-; check error page after submitting
-
-; fix copy table
-; fix name change for table
-; fix populate table confirmation
-
-подумать над добавлением переменных через UI.
-Думаю лучшим выходом будет парсинг таблиц и переменных с шаблона.
-
-; обработать неизвестный айдишник
-
-
-Ограничить количество запросов.
-Заморозить кнопки на отпраку запроса.
-Поставить пароль на вход.
-
-
-add tableProjectcart to populate
-
-update hooks
-update API DB
-update data tables for project and component
-update isenabled for template page
-update template creation add header and footer id keys
+add component to template
