add variables to components

--- a/todo
+++ b/todo
@@ -1,1 +1,13 @@
-add component to template
+Шаблон
+это html разметка с переменными и таблицами.
+
+Проект
+это шаблон с данными к созданным таблицам.
+Можно иметь боллее чем 1 проект с одним и тем же шаблоном.
+
+Лейаут
+это набор секций которые ссылаются на шаблон или компонент.
+
+Компонент
+это html разметка с переменными и таблицами.
+Компонент используется вместе с шаблоном в Лейауте.
